gen/pagespeedonline/v5/cargo-errors.log
    Checking google-pagespeedonline5 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/pagespeedonline/v5/lib)
error[E0412]: cannot find type `RunpagespeedCategoryItems` in module `crate::resources::pagespeedapi::params`
   --> pagespeedonline/v5/lib/src/lib.rs:737:68
    |
737 |                 Option<Vec<crate::resources::pagespeedapi::params::RunpagespeedCategoryItems>>,
    |                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::pagespeedapi::params`

error[E0412]: cannot find type `RunpagespeedCategoryItems` in module `crate::resources::pagespeedapi::params`
   --> pagespeedonline/v5/lib/src/lib.rs:754:78
    |
754 |                 value: impl Into<Vec<crate::resources::pagespeedapi::params::RunpagespeedCategoryItems>>,
    |                                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::pagespeedapi::params`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-pagespeedonline5`.

To learn more, run the command again with --verbose.
